# vk-segments-service

./: .gitignore  LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2025_08_11_0209-2eab5d6deb53_create_tables.py  2025_08_11_0223-a409468976b3_initial_migration.py
backend/app/: __init__.py  base.py  config.py  db_helper.py  main.py
backend/app/api/: __init__.py
backend/app/api/segment/: __init__.py  crud.py  dependencies.py  views.py
backend/app/api/user/: __init__.py  crud.py  dependencies.py  views.py
backend/app/api/utils/: __init__.py  distribute_segment.py
backend/app/associations_models/: __init__.py  user_segment.py
backend/app/models/: __init__.py  base.py  table_segment.py  table_user.py
backend/app/schemes/: __init__.py  segment.py  user.py  utils.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.mjs
frontend/src/: App.css  App.js  App.jsx  index.css  main.jsx
frontend/src/components/: SegmentForm.js  SegmentForm.jsx  SegmentManager.js  SegmentManager.jsx  UserForm.js  UserForm.jsx  UserSegments.js  UserSegments.jsx
frontend/src/services/: api.js
